[gd_scene load_steps=12 format=3 uid="uid://dsc368jhdwl6l"]

[ext_resource type="Script" path="res://Scripts/pong.gd" id="1_w2irh"]
[ext_resource type="Texture2D" uid="uid://bh3od1aft8kh3" path="res://Sprites/photo-1617957689187-997a52cd5e76.jpg" id="2_dr1jo"]
[ext_resource type="Script" path="res://Scripts/playerpong.gd" id="2_t5hfa"]
[ext_resource type="Script" path="res://Scripts/cpu.gd" id="4_lxono"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq1cw"]
size = Vector2(5, 52)

[sub_resource type="GDScript" id="GDScript_r1wq4"]
script/source = "extends CharacterBody2D

var win_size : Vector2
const START_SPEED : int = 350
const ACCEL : int = 50
var speed : int
var dir : Vector2
const MAX_Y_VECTOR : float = 0.6

# Called when the node enters the scene tree for the first time.
func _ready():
	win_size = get_viewport_rect().size
	$\".\".global_position = Vector2(position.x, position.y)

func new_ball():
	#randomize start position and direction
	position.x = win_size.x / 2
	position.y = randi_range(200, win_size.y - 200)
	speed = START_SPEED
	dir = random_direction()

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _physics_process(delta):
	var collision = move_and_collide(dir * speed * delta)
	var collider
	if collision:
		collider = collision.get_collider()
		#if ball hits paddle
		if collider == $\"../Player\" or collider == $\"../CPU\":
			speed += ACCEL
			dir = new_direction(collider)
		#if it hits a wall
		else:
			dir = dir.bounce(collision.get_normal())

func random_direction():
	var new_dir := Vector2()
	new_dir.x = [1, -1].pick_random()
	new_dir.y = randf_range(-1, 1)
	return new_dir.normalized()

func new_direction(collider):
	var ball_y = position.y
	var pad_y = collider.position.y
	var dist = ball_y - pad_y
	var new_dir := Vector2()
	
	#flip the horizontal direction
	if dir.x > 0:
		new_dir.x = -1
	else:
		new_dir.x = 1
	new_dir.y = (dist / (collider.p_height / 2)) * MAX_Y_VECTOR
	return new_dir.normalized()
"

[sub_resource type="CircleShape2D" id="CircleShape2D_rw5bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22war"]
size = Vector2(649, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7lx1"]
size = Vector2(5.25, 51.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mwgb"]
size = Vector2(9, 496)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31gs7"]
size = Vector2(9, 496)

[node name="Pong" type="Sprite2D"]
script = ExtResource("1_w2irh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 645.0
offset_bottom = 482.0
color = Color(3.30899e-08, 0.0299608, 0.112258, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 321.0
offset_top = 1.0
offset_right = 324.0
offset_bottom = 477.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 324.0
offset_top = -4.0
offset_right = 328.0
offset_bottom = 636.0
rotation = 1.57079

[node name="ColorRect3" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = -321.0
offset_top = 486.0
offset_right = -313.0
offset_bottom = 1125.0
rotation = -1.57079

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(25, 230)
script = ExtResource("2_t5hfa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_hq1cw")

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_left = -3.0
offset_top = -26.0
offset_right = 3.0
offset_bottom = 26.0

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(323, 230)
collision_mask = 3
script = SubResource("GDScript_r1wq4")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(0, 1)
scale = Vector2(0.00666667, 0.0118483)
texture = ExtResource("2_dr1jo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_rw5bv")

[node name="borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="top" type="CollisionShape2D" parent="borders"]
position = Vector2(327, -7)
shape = SubResource("RectangleShape2D_22war")

[node name="bottom" type="CollisionShape2D" parent="borders"]
position = Vector2(326, 487)
shape = SubResource("RectangleShape2D_22war")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(593, 230)
script = ExtResource("4_lxono")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
shape = SubResource("RectangleShape2D_v7lx1")

[node name="ColorRect" type="ColorRect" parent="CPU"]
offset_left = -3.0
offset_top = -26.0
offset_right = 3.0
offset_bottom = 26.0

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(-5.5, 238)
shape = SubResource("RectangleShape2D_1mwgb")

[node name="right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(645, 238)
shape = SubResource("RectangleShape2D_31gs7")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="playerscore" type="Label" parent="Hud"]
offset_left = 197.0
offset_top = 16.0
offset_right = 252.0
offset_bottom = 39.0
size_flags_horizontal = 0
text = "VocÃª: 0"

[node name="cpuscore" type="Label" parent="Hud"]
offset_left = 392.0
offset_top = 16.0
offset_right = 442.0
offset_bottom = 39.0
text = "CPU: 0"

[node name="advice" type="Label" parent="Hud"]
offset_left = 321.0
offset_top = 456.0
offset_right = 641.0
offset_bottom = 480.0
size_flags_horizontal = 0
text = "Se quiser sair, pressione esc"
horizontal_alignment = 1
autowrap_mode = 3

[node name="BallTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true
autostart = true

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
